--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ nav {
   visibility: hidden;
   position: absolute;
   width: 100vw;
-  z-index:5;
+  z-index: 4;
 }
 
 div:not(#navbar, #welcomescreen, #imagecontainer, #audiocontainer) {
@@ -29,10 +29,71 @@ div:not(#navbar, #welcomescreen, #imagecontainer, #audiocontainer) {
   justify-content: center;
 }
 
+a {
+  text-decoration: none;
+}
+
+h1, h2, p {
+  margin: 5% 0 5% 0;
+  z-index: 2;
+  text-align: center;
+}
+
+canvas {
+  margin: 0 auto 0 auto;
+}
+
+img {
+  height: 20vh;
+}
+
+#imagecontainer {
+  display: grid;
+}
+
+#audiocontainer {
+  display: grid;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  visibility: hidden;
+  position: absolute;
+  width: 100vw;
+  z-index: 4;
+}
+
+#hamburger {
+  position: relative;
+  visibility: visible;
+}
+
 #navbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+#navbar img {
+  height: 50px;
+  align-self: end;
+}
+
+#hamburger {
+  position: relative;
+  visibility: visible;
+}
+
+video {
+  align-content: center;
+  margin: 61px auto 0 auto;
+}
+
+video {
+  z-index: 3;
+  width: 100vw;
 }
 
 #welcomescreen {
@@ -42,27 +103,25 @@ div:not(#navbar, #welcomescreen, #imagecontainer, #audiocontainer) {
   margin: 2% 0 12% 0;
 }
 
-#hamburger {
-  position: relative;
-  visibility: visible;
-}
-#hamburger:hover {
-  cursor: pointer;
-}
-
-video {
-  align-content: center;
-  margin: 61px auto 0 auto;
-}
-
-a {
-  text-decoration: none;
-}
-
-h1, h2, p {
-  margin: 5% 0 5% 0;
-  z-index: 2;
+#welcomescreen {
+  display: flex;
   text-align: center;
+}
+#welcomescreen h1 {
+  color: white;
+}
+#welcomescreen h2 {
+  color: white;
+  margin: -31% 0 15% 0;
+  z-index: 4;
+}
+#welcomescreen p {
+  color: white;
+}
+
+#welcomescreen img {
+  height: 150px;
+  z-index: 2;
 }
 
 @media (max-width: 957px) {
@@ -100,63 +159,6 @@ h1, h2, p {
   nav:active {
     animation-name: hamburger;
     animation-duration: 1s;
-  }
-}
-#welcomescreen {
-  display: flex;
-  text-align: center;
-}
-#welcomescreen h1 {
-  color: white;
-}
-#welcomescreen h2 {
-  color: white;
-  margin: -31% 0 15% 0;
-  z-index: 4;
-}
-#welcomescreen p {
-  color: white;
-}
-
-#navbar img {
-  height: 50px;
-  align-self: end;
-}
-
-video {
-  z-index: 3;
-  width: 100vw;
-}
-
-#welcomescreen img {
-  height: 150px;
-  z-index: 2;
-}
-
-canvas {
-  margin: 0 auto 0 auto;
-}
-
-img {
-  height: 20vh;
-}
-
-#imagecontainer {
-  display: grid;
-}
-
-#audiocontainer {
-  display: grid;
-}
-
-@keyframes hamburger {
-  from {
-    visibility: visible;
-    top: 0;
-  }
-  to {
-    visibility: visible;
-    top: 20;
   }
 }
 
