--- a/navbar.scss
+++ b/navbar.scss
@@ -10,6 +10,7 @@ nav {
 #hamburger {
     position:relative;
     visibility:visible;
+    cursor: pointer;
 }
 #navbar {
     display:flex;
@@ -23,6 +24,7 @@ nav {
 #hamburger {
     position:relative;
     visibility:visible;
+    cursor: pointer;
 }
 video {
     align-content:center;
