--- a/main.css
+++ b/main.css
@@ -68,6 +68,7 @@ nav {
 #hamburger {
   position: relative;
   visibility: visible;
+  cursor: pointer;
 }
 
 #navbar {
@@ -84,6 +85,7 @@ nav {
 #hamburger {
   position: relative;
   visibility: visible;
+  cursor: pointer;
 }
 
 video {
